--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "private": true,
   "scripts": {},
   "dependencies": {
+    "@release-it/conventional-changelog": "^7.0.0",
     "@rollup/plugin-typescript": "^11.1.2",
     "@types/node": "^20.5.2",
     "prettier": "^3.0.2",
+    "release-it": "^16.1.5",
     "rollup": "^3.28.1",
     "tslib": "^2.6.2",
-    "tsup": "^7.2.0"
+    "tsup": "^7.2.0",
+    "typescript": "5.1.6"
   },
+  "packageManager": "pnpm@8.6.12",
   "volta": {
     "node": "20.5.1"
   }
